# kkvector

./: CMakeLists.txt  LICENSE  README.md
include/: kkvector.h
src/: kkvector.c
